# adlukk-education-app

./: App.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STRUCTURE.md  analysis_options.yaml
.github/workflows/: flutter_build.yml
android/: build.gradle  gradlew  settings.gradle
android/app/: proguard-rules.pro
app/: pubspec.yaml
app/android/: settings.gradle
app/android/app/: build.gradle
app/app/: pubspec.yaml
app/lib/: main.dart
app/lib/core/: db.dart  sync_service.dart
app/web/: flutter.js  icons  index.html
assets/: .gitkeep
assets/icons/: .gitkeep
assets/images/: .gitkeep
backend/: database.dart
content/: lessons.json
github/workflows/: flutter.yml.
ios/: Podfile
ios/Runner/: Info.plist
lib/: app.dart  firebase_options.dart  main.dart  main_app.dart  student_screen.dart
lib/core/di/: app_services.dart  Edit
lib/core/models/: reading_lesson.dart  (+1 more)
lib/offline/: book_storage_service.dart  db_tables.dart  hive_service.dart
lib/screens/: admin_screen.dart  finance_screen.dart  lesson_from_json_screen.dart  math_lesson_screen.dart  math_lessons_screen.dart  pubspec.yaml  quran_lessons_screen.dart  reading_lessons_screen.dart  root_shell.dart  subject_lessons_screen.dart  subjects_screen.dart
lib/services/: api_service.dart  database_service.dart  db_service.dart  sync_service.dart
linux/: CMakeLists.txt  README.md
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
sync/: rules.json
windows/: CMakeLists.txt
windows/runner/: flutter_window.cpp  flutter_window.h  main.cpp
(+29 files in other folders)
